...
    <string name="module_note_background">Note background</string>
    <string name="module_recovered_draft">Recovered draft</string>
    <string name="module_notes_is_locked">Notes is locked</string>
    <string name="module_clear_selection">Clear selection</string>
    <string name="module_untitled_draft">Untitled draft</string>
    <string name="module_unpin_selected">Unpin selected</string>
    <string name="module_notes_options">Notes options</string>
    <string name="module_manage_labels">Manage labels</string>
    <string name="module_protect_notes">Protect Notes</string>
    <string name="module_dismiss_error">Dismiss error</string>
    <string name="module_search_notes">Search notes</string>
    <string name="module_pin_selected">Pin selected</string>
    <string name="module_bin_is_empty">Bin is empty</string>
    <string name="module_save_a_copy">Save a copy</string>
    <string name="module_note_color">Note color</string>
    <string name="module_search_bin">Search Bin</string>
    <string name="module_copy_draft">Copy draft</string>
    <string name="module_grid_view">Grid view</string>
    <string name="module_save_name">Save name</string>
    <string name="module_add_label">Add label</string>
    <string name="module_no_notes">No notes</string>
    <string name="module_untitled">Untitled</string>
    <string name="module_new_note">New note</string>
    <string name="module_pinned">Pinned</string>
    <string name="module_unlock">Unlock</string>
    <string name="module_labels">Labels</string>
    <string name="module_label">Label</string>
    <string name="module_empty">Empty</string>
    <string name="module_retry">Retry</string>
...
    <string name="module_bulleted_list">Bulleted list</string>
    <string name="module_strikethrough">Strikethrough</string>
    <string name="module_numbered_list">Numbered list</string>
    <string name="module_adding_image">Adding image</string>
    <string name="module_cancel_link">Cancel link</string>
    <string name="module_text_color">Text color</string>
    <string name="module_undo_edit">Undo edit</string>
    <string name="module_save_link">Save link</string>
    <string name="module_open_link">Open link</string>
    <string name="module_link_text">Link text</string>
    <string name="module_redo_edit">Redo edit</string>
    <string name="module_underline">Underline</string>
    <string name="module_italic">Italic</string>
...
